<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/theme_drawer_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_strawberry"
            android:icon="@drawable/strawberry"
            android:title="@string/strawberry" />
        <item
            android:id="@+id/item_orange"
            android:icon="@drawable/orange"
            android:title="@string/orange"  />
        <item
            android:id="@+id/item_grapes"
            android:icon="@drawable/grapes"
            android:title="@string/grapes" />
        <item
            android:id="@+id/item_lemon"
            android:icon="@drawable/lemon"
            android:title="@string/lemon" />
        <item
            android:id="@+id/item_water"
            android:icon="@drawable/water"
            android:title="@string/water" />
    </group>
</menu>